--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: PoeticSound_by_Numbers
+logo: /assets/img/logo.png
+description: PoeticSound_by_Numbers Pages.
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-minimal
